docs/k8s/k8s-vulcan-deployment-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulcan-web
  labels:
    app: vulcan-web
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: vulcan-web
  strategy:
    type: RollingUpdate   # Upgrade this application with a rolling strategy
    rollingUpdate:
      maxSurge: 1         # maximum number of pods that can be scheduled above the desired number of pods (replicas)
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: vulcan-web
    spec:
      automountServiceAccountToken: false
      containers:
      - name: vulcan-web
        image: mitre/vulcan:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 3000
          name: vulcan-web
        resources:
          limits:
            cpu: "500m"
            memory: 1Gi
          requests:
            cpu: "500m"
            memory: 1Gi
        volumeMounts:
        - name: config-volume
          mountPath: /app/config/vulcan.yml
          subPath: ara-dev-vulcan-config.yml
      volumes:
        - name: config-volume
          configMap:
            name: vulcan-config
