docs/k8s/k8s-vulcan-nginx-ingress-example.yaml
kind: Service
apiVersion: v1
metadata:
  name: vulcan-service
  labels:
    app: vulcan-web
spec:
  type: NodePort
  selector:
    app: vulcan-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: vulcan-web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vulcan-ingress
  labels:
    app: vulcan-web
  annotations:
    nginx.ingress.kubernetes.io/client-max-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  rules:
    - host: vulcan.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vulcan-service
                port:
                  number: 3000
